--- a/sellandbuy/src/templates/form-jual/form-awal.ejs
+++ b/sellandbuy/src/templates/form-jual/form-awal.ejs
@@ -1,5 +1,3 @@
-<!-- Buat template awal EJS lainnya -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -16,11 +14,10 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
-
     <!-- Navbar -->
     <div id="nav-wrp" class="mb-20">
       <header
@@ -31,36 +28,52 @@
           id="top-nav"
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
-        <div id="left-part" class="sm:w-1/3 flex justify-start">
-          <div class="relative inline-block text-left">
-            <div>
-              <button
-                type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200"
-                id="menu-button"
-                aria-expanded="false"
-                aria-haspopup="true"
+          <div id="left-part" class="sm:w-1/3 flex justify-start">
+            <div class="relative inline-block text-left">
+              <div>
+                <button
+                  type="button"
+                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200"
+                  id="menu-button"
+                  aria-expanded="false"
+                  aria-haspopup="true"
+                >
+                  <img class="w-btn-pfl" src="/images/pictures/default.png" />
+                </button>
+              </div>
+              <div
+                class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+                role="menu"
+                aria-orientation="vertical"
+                aria-labelledby="menu-button"
+                tabindex="-1"
+                id="menu"
               >
-                <img class="w-btn-pfl" src="images/pictures/default.png" />
-              </button>
-            </div>
-            <div
-              class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-              role="menu"
-              aria-orientation="vertical"
-              aria-labelledby="menu-button"
-              tabindex="-1"
-              id="menu"
-            >
-              <div class="py-1" role="none">
-                <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
-                <form method="POST" action="#" role="none">
-                  <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                </form>
+                <div class="py-1" role="none">
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/profile'"
+                  >
+                    Profile
+                  </button>
+                  <form method="POST" action="#" role="none">
+                    <button
+                      type="submit"
+                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                      role="menuitem"
+                      tabindex="-1"
+                      id="menu-item-1"
+                    >
+                      Logout
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
           <a
             href="/"
             id="navbar-logo"
@@ -69,16 +82,16 @@
             <img
               id="logo"
               class="h-5 sm:h-9 sm:w-auto cursor-pointer"
-              src="images/navbar-logo.png"
+              src="/images/navbar-logo.png"
             />
           </a>
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
             <a
               id="sell"
-              href="#"
+              href="/jual"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
-              <img class="w-btn-pfl" src="images/tambahkan.png" />
+              <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
             <div
               id="srch-bar"
@@ -173,11 +186,167 @@
     </div>
 
     <!-- Content -->
-    <div
-      id="content"
-      class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
-    >
-
+    <div id="content" class="w-full flex flex-col align-middle justify-center">
+      <form
+        action="/jual"
+        method="POST"
+        enctype="multipart/form-data"
+        class="w-full max-w-7xl mx-auto p-8"
+      >
+        <h1 class="text-3xl font-bold mb-6">Isi Detail Produk</h1>
+        <hr class="h-px w-full bg-black border-0 mb-6" />
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+          <div>
+            <h2 class="text-2xl font-bold mb-4">Detail Produk</h2>
+            <div class="mb-4">
+              <label
+                for="productName"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Nama Produk</label
+              >
+              <input
+                type="text"
+                id="productName"
+                name="productName"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              />
+            </div>
+            <div class="mb-4">
+              <label
+                for="category"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Kategori Produk</label
+              >
+              <input
+                type="text"
+                id="category"
+                name="category"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              />
+            </div>
+            <div class="mb-4">
+              <label
+                for="price"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Harga Produk</label
+              >
+              <input
+                type="number"
+                id="price"
+                name="price"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              />
+            </div>
+            <div class="mb-4">
+              <label
+                for="reasonForSelling"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Alasan Menjual Produk</label
+              >
+              <input
+                type="text"
+                id="reasonForSelling"
+                name="reasonForSelling"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              />
+            </div>
+            <div class="mb-4">
+              <label
+                for="description"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Deskripsi Produk</label
+              >
+              <textarea
+                id="description"
+                name="description"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              ></textarea>
+            </div>
+            <div class="mb-4">
+              <label
+                for="location"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Lokasi Kota</label
+              >
+              <input
+                type="text"
+                id="location"
+                name="location"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              />
+            </div>
+            <div class="mb-4">
+              <label
+                for="fullAddress"
+                class="block text-gray-700 text-lg font-semibold mb-2"
+                >Alamat Lengkap</label
+              >
+              <input
+                type="text"
+                id="fullAddress"
+                name="fullAddress"
+                required
+                class="w-full p-2 border border-gray-300 rounded"
+              />
+            </div>
+          </div>
+          <div>
+            <h2 class="text-2xl font-bold mb-4">
+              Tambahkan Gambar / Foto Produk
+            </h2>
+            <input
+              type="file"
+              id="productImages"
+              name="productImages"
+              accept="image/*"
+              multiple
+              required
+              class="w-full p-2 border border-gray-300 rounded mb-5"
+            />
+            <div class="mb-4">
+              <label class="inline-flex items-center">
+                <input type="checkbox" required class="form-checkbox" />
+                <span class="ml-2"
+                  >Dengan menggunakan layanan kami, Anda menyerahkan informasi
+                  Anda kepada kami. Kami paham bahwa melindungi informasi Anda
+                  dan memberikan kontrol kepada Anda adalah tanggung jawab yang
+                  besar dan memerlukan kerja keras.</span
+                >
+              </label>
+            </div>
+            <div class="mb-4">
+              <label class="inline-flex items-center">
+                <input type="checkbox" required class="form-checkbox" />
+                <span class="ml-2"
+                  >Saya dengan ini menyatakan bahwa saya telah membaca dan
+                  memahami semua ketentuan dan kebijakan yang terkait dengan
+                  penggunaan aplikasi/website ini. Saya sepenuhnya setuju dan
+                  bersedia mematuhi semua aturan yang telah ditetapkan. Saya
+                  mengerti bahwa ketidakpatuhan terhadap kebijakan ini dapat
+                  mengakibatkan tindakan penghentian akses atau tindakan lain
+                  sesuai ketentuan yang berlaku.</span
+                >
+              </label>
+            </div>
+            <p class="text-gray-500 mb-4">
+              Untuk pengiklanan produk akan dikenakan biaya sebesar RP2.500 /
+              produk
+            </p>
+            <button
+              type="submit"
+              class="w-full bg-black text-white py-2 rounded"
+            >
+              Selesaikan Pembayaran
+            </button>
+          </div>
+        </div>
+      </form>
     </div>
 
     <!-- Footer -->
@@ -214,7 +383,7 @@
               class="w-1/2 sm:w-2/3 flex flex-col sm:flex-row justify-between sm:justify-start"
             >
               <img
-                src="images/footer-logo.png"
+                src="/images/footer-logo.png"
                 class="w-[150px] sm:w-[300px] mr-[5px]"
               />
               <span
@@ -237,16 +406,16 @@
               class="w-1/2 sm:w-1/3 flex flex-row justify-between items-center"
             >
               <a href="#" class="flex items-center"
-                ><img src="images/instagram.png"
+                ><img src="/images/instagram.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/whatsapp.png"
+                ><img src="/images/whatsapp.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/linkedin.png"
+                ><img src="/images/linkedin.png"
               /></a>
               <a href="#" class="flex items-center"
-                ><img src="images/email.png"
+                ><img src="/images/email.png"
               /></a>
             </div>
           </div>
@@ -254,43 +423,38 @@
       </div>
     </footer>
 
+    <!-- Scripts -->
     <script>
-    function toggleMenu(event) {
-          const menu = document.getElementById('menu');
-          const isHidden = menu.classList.contains('hidden');
-          menu.classList.toggle('hidden', !isHidden);
-          menu.setAttribute('aria-expanded', !isHidden);
-          event.currentTarget.setAttribute('aria-expanded', !isHidden);
+      document.addEventListener("DOMContentLoaded", () => {
+        function toggleMenu(event) {
+          const menu = document.getElementById("menu");
+          const isHidden = menu.classList.contains("hidden");
+          menu.classList.toggle("hidden", !isHidden);
+          menu.setAttribute("aria-expanded", !isHidden);
+          event.currentTarget.setAttribute("aria-expanded", !isHidden);
         }
-      
-        const menuButton = document.getElementById('menu-button');
-        menuButton.addEventListener('click', toggleMenu);
-      
-        document.addEventListener('click', (event) => {
-          const menu = document.getElementById('menu');
-          if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
-            menu.classList.add('hidden');
-            menuButton.setAttribute('aria-expanded', 'false');
+
+        const menuButton = document.getElementById("menu-button");
+        menuButton.addEventListener("click", toggleMenu);
+
+        document.addEventListener("click", (event) => {
+          const menu = document.getElementById("menu");
+          if (
+            !menuButton.contains(event.target) &&
+            !menu.contains(event.target)
+          ) {
+            menu.classList.add("hidden");
+            menuButton.setAttribute("aria-expanded", "false");
           }
         });
 
-    function readMoreFunction() {
-      var dots = document.getElementById("dots");
-      var moreText = document.getElementById("more");
-      var btnText = document.getElementById("myBtn");
-
-      if (dots.style.display === "none") {
-        dots.style.display = "inline";
-        btnText.innerHTML = "Lihat Selengkapnya";
-        moreText.style.display = "none";
-      } else {
-        dots.style.display = "none";
-        btnText.innerHTML = "Lihat Lebih Sedikt";
-        moreText.style.display = "inline";
-      }
-    }
-        
-
+        const profileLink = document.getElementById("menu-item-0");
+        if (profileLink) {
+          profileLink.addEventListener("click", () => {
+            console.log("Profile link clicked");
+          });
+        }
+      });
     </script>
 
     <script src="js/script.js"></script>
