--- a/sellandbuy/src/templates/form-jual/pembayaran.ejs
+++ b/sellandbuy/src/templates/form-jual/pembayaran.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Your Favorite E-Commerce - Sell and Buy</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sell & Buy - Product Form</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,16 +11,16 @@
       rel="stylesheet"
     />
     <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/pembayaran.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
-  <body class="pt-[101.2px] sm:pt-[96px] font-saira">
-
+  <body class="min-h-screen flex flex-col font-saira">
     <!-- Navbar -->
-    <div id="nav-wrp">
+    <div id="nav-wrp" class="mb-20">
       <header
         id="navbar"
         class="bg-white fixed flex items-center justify-center flex-col inset-x-0 top-0 z-50"
@@ -29,58 +29,79 @@
           id="top-nav"
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
-
-        <!-- Left Nav   -->
-        <div id="left-part" class="sm:w-1/3 flex justify-start">
-          <div class="relative inline-block text-left">
-            <div>
-              <button
-                type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 shadow-sm border-black hover:bg-slate-400"
-                id="menu-button"
-                aria-expanded="false"
-                aria-haspopup="true"
+          <div id="left-part" class="sm:w-1/3 flex justify-start">
+            <div class="relative inline-block text-left">
+              <div>
+                <button
+                  type="button"
+                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
+                  id="menu-button"
+                  aria-expanded="false"
+                  aria-haspopup="true"
+                >
+                  <img class="w-btn-pfl" src="/images/pictures/default.png" />
+                </button>
+              </div>
+              <div
+                class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+                role="menu"
+                aria-orientation="vertical"
+                aria-labelledby="menu-button"
+                tabindex="-1"
+                id="menu"
               >
-                <img class="w-btn-pfl" src="images/pictures/default.png" />
-              </button>
-            </div>
-            <div
-              class="absolute left-0 right-0 z-10 mt-2 min-w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-              role="menu"
-              aria-orientation="vertical"
-              aria-labelledby="menu-button"
-              tabindex="-1"
-              id="menu"
-            >
-              <div class="py-1" role="none">
-                <button class="block px-4 py-2 text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
-                <form method="POST" action="#" role="none">
-                  <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                </form>
+                <div class="py-1" role="none">
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/profile'"
+                  >
+                    Profile
+                  </button>
+                  <button
+                    class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/membership'"
+                  >
+                    Jadi Member
+                  </button>
+                  <form method="POST" action="#" role="none">
+                    <button
+                      type="submit"
+                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                      role="menuitem"
+                      tabindex="-1"
+                      id="menu-item-1"
+                    >
+                      Logout
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        
-        <!-- Nav Logo -->
           <a
             href="/"
             id="navbar-logo"
-            class="w-auto sm:w-1/3 flex items-center justify-center"
+            class="w-auto mx-auto sm:w-1/3 flex items-center justify-center"
           >
             <img
               id="logo"
               class="h-5 sm:h-9 sm:w-auto cursor-pointer"
-              src="images/navbar-logo.png"
+              src="/images/navbar-logo.png"
             />
           </a>
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
             <a
               id="sell"
-              href="#"
+              href="/jual"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
-              <img class="w-btn-pfl" src="images/tambahkan.png" />
+              <img class="w-btn-pfl" src="/images/tambahkan.png" />
             </a>
             <div
               id="srch-bar"
@@ -121,24 +142,7 @@
               </form>
             </div>
           </div>
-          <div id="slider" class="flex sm:hidden justify-end items-center">
-            <a id="menu" href="#">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="24px"
-                viewBox="0 -960 960 960"
-                width="24px"
-                fill="#000000"
-              >
-                <path
-                  d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
-                ></path>
-              </svg>
-            </a>
-          </div>
         </div>
-
-        <!-- Right Nav -->
         <div
           id="bot-nav"
           class="w-full flex items-center justify-center pt-2 pb-4 sm:px-[20px]"
@@ -177,42 +181,205 @@
     </div>
 
     <!-- Content -->
-    <div id="content" class="w-full flex flex-col align-middle justify-center">
-    
+    <div
+      id="content"
+      class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
+    >
+      <!-- Header -->
+      <section class="w-full sm:w-1/2 max-w-7xl mx-auto p-8">
+        <h1
+          class="header text-5xl font-bold text-center lg:text-left mt-12 mb-4"
+        >
+          Let's finish the payment
+        </h1>
+        <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+      </section>
+
+      <!-- Payment Section -->
+      <section class="py-8">
+        <div class="max-w-7xl mx-auto px-4">
+          <div class="payment-container grid grid-cols-1 md:grid-cols-2 gap-6">
+            <!-- Payment Form -->
+            <div class="border-2 my-auto border-black p-6 rounded-lg shadow-lg">
+              <h2 class="text-4xl font-semibold my-1 text-center">
+                Scan Barcode di Bawah ini
+              </h2>
+              <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+              <img
+                src="/images/qr-code.png"
+                alt="Barcode"
+                class="mx-auto w-3/4 md:w-3/4"
+              />
+              <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+              <div>
+                <form
+                  action="/finish-payment/<%= product.id %>"
+                  method="POST"
+                  enctype="multipart/form-data"
+                >
+                  <div class="mt-4">
+                    <label
+                      for="paymentProof"
+                      class="block text-lg font-medium text-gray-700"
+                      >Upload Bukti Pembayaran:</label
+                    >
+                    <input
+                      type="file"
+                      name="paymentProof"
+                      id="paymentProof"
+                      accept="image/*"
+                      class="mt-2 px-4 py-2 rounded-lg border border-gray-300 shadow-sm"
+                      required
+                    />
+                  </div>
+                  <button
+                    class="bg-black text-white py-2 px-12 mt-4 rounded-xl hover:bg-gray-900"
+                    type="submit"
+                  >
+                    Saya sudah membayar
+                  </button>
+                </form>
+                <p class="mt-2">
+                  Dengan checkout, Anda setuju dengan
+                  <strong>Kebijakan Privasi</strong> Penggunaan kami dan
+                  mengonfirmasi bahwa Anda telah membaca
+                  <strong>Kebijakan Privasi</strong> kami. Anda dapat
+                  membatalkan biaya perpanjangan layanan kapan saja.
+                </p>
+              </div>
+              <p class="text-gray-500 text-xs mt-4">
+                * Biaya untuk 1 bulan pertama. <br />
+                * Pembelian dapat dibatalkan.
+              </p>
+            </div>
+
+            <!-- Illustration -->
+            <div class="illustration flex justify-center items-center">
+              <img
+                src="/images//svg/post-office.svg"
+                alt="Illustration"
+                class="w-full md:w-3/4"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
-    <!-- Scripts -->
+    <!-- Footer -->
+    <footer class="mt-auto">
+      <div id="ftr-wrp">
+        <div
+          id="ftr"
+          class="grid grid-cols-1 grid-rows-1 gap-y-[2px] flex-col items-center bg-white text-white font-saira"
+        >
+          <div
+            id="top-ftr"
+            class="flex flex-row items-center justify-between pt-[15px] pb-3 px-2 sm:px-16 bg-black text-[10px] sm:text-[20px]"
+          >
+            <div
+              id="cstmr-srvc"
+              class="w-fit flex flex-row items-center justify-start"
+            >
+              <a href="/faq" class="leading-6">FAQ</a>
+              <h1 id="divider" class="mx-3 text-sm">|</h1>
+              <a href="/privacy" class="leading-6">Privacy Policy</a>
+              <h1 id="divider" class="mx-3 text-sm">|</h1>
+              <a href="/tos" class="leading-6">Terms & Condition</a>
+            </div>
+            <div id="c-right" class="w-auto flex justify-end items-center">
+              <h1>CopyRight © 2024 Sell&Buy</h1>
+            </div>
+          </div>
+          <div
+            id="bot-ftr"
+            class="flex flex-col sm:flex-row bg-black px-2 sm:px-16 py-3.5 sm:py-7 justify-between"
+          >
+            <div
+              id="cmpny"
+              class="w-1/2 sm:w-2/3 flex flex-col sm:flex-row justify-between sm:justify-start"
+            >
+              <img
+                src="/images/footer-logo.png"
+                class="w-[150px] sm:w-[300px] mr-[5px]"
+              />
+              <span
+                class="flex flex-col justify-between items-start text-[10px] sm:text-[15px]"
+              >
+                <h1 class="flex align-top justify-start text-left">
+                  Alamat: Jl. Komojoyo No.16, Caturtunggal, Daerah Istimewa
+                  Yogyakarta
+                </h1>
+                <h1 class="flex align-top justify-start text-left">
+                  Phone: 0822-4671-3849
+                </h1>
+                <h1 class="flex align-top justify-start text-left">
+                  Email: sellandbuy@gmail.com
+                </h1>
+              </span>
+            </div>
+            <div
+              id="social"
+              class="w-1/2 sm:w-1/3 flex flex-row justify-between items-center"
+            >
+              <a href="#" class="flex items-center"
+                ><img src="/images/instagram.png"
+              /></a>
+              <a href="#" class="flex items-center"
+                ><img src="/images/whatsapp.png"
+              /></a>
+              <a href="#" class="flex items-center"
+                ><img src="/images/linkedin.png"
+              /></a>
+              <a href="#" class="flex items-center"
+                ><img src="/images/email.png"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-          function toggleMenu(event) {
-            const menu = document.getElementById('menu');
-            const isHidden = menu.classList.contains('hidden');
-            menu.classList.toggle('hidden', !isHidden);
-            menu.setAttribute('aria-expanded', !isHidden);
-            event.currentTarget.setAttribute('aria-expanded', !isHidden);
-          }
-        
-          const menuButton = document.getElementById('menu-button');
-          menuButton.addEventListener('click', toggleMenu);
-        
-          document.addEventListener('click', (event) => {
-            const menu = document.getElementById('menu');
-            if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
-              menu.classList.add('hidden');
-              menuButton.setAttribute('aria-expanded', 'false');
-            }
-          });
-        
-          const profileLink = document.getElementById('menu-item-0');
-          if (profileLink) {
-            profileLink.addEventListener('click', () => {
-              console.log('Profile link clicked');
-            });
-          }
-        });   
-      </script>
-  
-      <script src="js/script.js"></script>
-    </body>
-  </html>
-  
+      function toggleMenu(event) {
+        const menu = document.getElementById("menu");
+        const isHidden = menu.classList.contains("hidden");
+        menu.classList.toggle("hidden", !isHidden);
+        menu.setAttribute("aria-expanded", !isHidden);
+        event.currentTarget.setAttribute("aria-expanded", !isHidden);
+      }
+
+      const menuButton = document.getElementById("menu-button");
+      menuButton.addEventListener("click", toggleMenu);
+
+      document.addEventListener("click", (event) => {
+        const menu = document.getElementById("menu");
+        if (
+          !menuButton.contains(event.target) &&
+          !menu.contains(event.target)
+        ) {
+          menu.classList.add("hidden");
+          menuButton.setAttribute("aria-expanded", "false");
+        }
+      });
+
+      function readMoreFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Lihat Selengkapnya";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Lihat Lebih Sedikt";
+          moreText.style.display = "inline";
+        }
+      }
+    </script>
+
+    <script src="/js/script.js"></script>
+  </body>
+</html>
