--- a/sellandbuy/src/templates/landing-page/index.ejs
+++ b/sellandbuy/src/templates/landing-page/index.ejs
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/navbar.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="pt-[101.2px] sm:pt-[96px] font-saira">
@@ -29,41 +29,64 @@
           id="top-nav"
           class="w-full flex items-center sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
-
-        <!-- Profile Nav -->
-        <div id="left-part" class="sm:w-1/3 flex justify-start">
-          <div class="relative inline-block text-left">
-            <div>
-              <button
-                type="button"
-                class="dropdown-before inline-flex w-full justify-center rounded-md bg-white px-3 py-2 shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
-                id="menu-button"
-                aria-expanded="false"
-                aria-haspopup="true"
+          <!-- Profile Nav -->
+          <div id="left-part" class="sm:w-1/3 flex justify-start">
+            <div class="relative inline-block text-left">
+              <div>
+                <button
+                  type="button"
+                  class="dropdown-before inline-flex w-full justify-center rounded-md bg-white px-3 py-2 shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
+                  id="menu-button"
+                  aria-expanded="false"
+                  aria-haspopup="true"
+                >
+                  <img class="w-btn-pfl" src="images/pictures/default.png" />
+                </button>
+              </div>
+              <div
+                class="dropdown-after absolute left-0 right-0 z-50 mt-2 min-w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+                role="menu"
+                aria-orientation="vertical"
+                aria-labelledby="menu-button"
+                tabindex="-1"
+                id="menu"
               >
-                <img class="w-btn-pfl" src="images/pictures/default.png" />
-              </button>
-            </div>
-            <div
-              class="dropdown-after absolute left-0 right-0 z-50 mt-2 min-w-max origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-              role="menu"
-              aria-orientation="vertical"
-              aria-labelledby="menu-button"
-              tabindex="-1"
-              id="menu"
-            >
-              <div class="py-1" role="none">
-                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
-                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
-                <form method="POST" action="#" role="none">
-                  <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                </form>
+                <div class="py-1" role="none">
+                  <button
+                    class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/profile'"
+                  >
+                    Profile
+                  </button>
+                  <button
+                    class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/membership'"
+                  >
+                    Jadi Member
+                  </button>
+                  <form method="POST" action="#" role="none">
+                    <button
+                      type="submit"
+                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                      role="menuitem"
+                      tabindex="-1"
+                      id="menu-item-1"
+                    >
+                      Logout
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        
-        <!-- Logo Nav -->
+
+          <!-- Logo Nav -->
           <a
             href="/"
             id="navbar-logo"
@@ -78,7 +101,7 @@
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
             <a
               id="sell"
-              href="#"
+              href="/jual"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="images/tambahkan.png" />
@@ -296,30 +319,32 @@
       </div>
     </footer>
 
-
     <!-- Script -->
     <script src="js/script.js"></script>
     <script>
-      document.addEventListener('DOMContentLoaded', () => {
+      document.addEventListener("DOMContentLoaded", () => {
         function toggleMenu(event) {
-          const menu = document.getElementById('menu');
-          const isHidden = menu.classList.contains('hidden');
-          menu.classList.toggle('hidden', !isHidden);
-          menu.setAttribute('aria-expanded', !isHidden);
-          event.currentTarget.setAttribute('aria-expanded', !isHidden);
+          const menu = document.getElementById("menu");
+          const isHidden = menu.classList.contains("hidden");
+          menu.classList.toggle("hidden", !isHidden);
+          menu.setAttribute("aria-expanded", !isHidden);
+          event.currentTarget.setAttribute("aria-expanded", !isHidden);
         }
-      
-        const menuButton = document.getElementById('menu-button');
-        menuButton.addEventListener('click', toggleMenu);
-      
-        document.addEventListener('click', (event) => {
-          const menu = document.getElementById('menu');
-          if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
-            menu.classList.add('hidden');
-            menuButton.setAttribute('aria-expanded', 'false');
+
+        const menuButton = document.getElementById("menu-button");
+        menuButton.addEventListener("click", toggleMenu);
+
+        document.addEventListener("click", (event) => {
+          const menu = document.getElementById("menu");
+          if (
+            !menuButton.contains(event.target) &&
+            !menu.contains(event.target)
+          ) {
+            menu.classList.add("hidden");
+            menuButton.setAttribute("aria-expanded", "false");
           }
         });
-      });    
-  </script>
+      });
+    </script>
   </body>
 </html>
