--- a/sellandbuy/src/templates/membership/pembayaran.ejs
+++ b/sellandbuy/src/templates/membership/pembayaran.ejs
@@ -14,12 +14,11 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/pembayaran.css">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/pembayaran.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
-
     <!-- Navbar -->
     <div id="nav-wrp" class="mb-20">
       <header
@@ -30,37 +29,61 @@
           id="top-nav"
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
-        <div id="left-part" class="sm:w-1/3 flex justify-start">
-          <div class="relative inline-block text-left">
-            <div>
-              <button
-                type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
-                id="menu-button"
-                aria-expanded="false"
-                aria-haspopup="true"
+          <div id="left-part" class="sm:w-1/3 flex justify-start">
+            <div class="relative inline-block text-left">
+              <div>
+                <button
+                  type="button"
+                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
+                  id="menu-button"
+                  aria-expanded="false"
+                  aria-haspopup="true"
+                >
+                  <img class="w-btn-pfl" src="/images/pictures/default.png" />
+                </button>
+              </div>
+              <div
+                class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+                role="menu"
+                aria-orientation="vertical"
+                aria-labelledby="menu-button"
+                tabindex="-1"
+                id="menu"
               >
-                <img class="w-btn-pfl" src="/images/pictures/default.png" />
-              </button>
-            </div>
-            <div
-              class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-              role="menu"
-              aria-orientation="vertical"
-              aria-labelledby="menu-button"
-              tabindex="-1"
-              id="menu"
-            >
-              <div class="py-1" role="none">
-                <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
-                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
-                <form method="POST" action="#" role="none">
-                  <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                </form>
+                <div class="py-1" role="none">
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/profile'"
+                  >
+                    Profile
+                  </button>
+                  <button
+                    class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/membership'"
+                  >
+                    Jadi Member
+                  </button>
+                  <form method="POST" action="#" role="none">
+                    <button
+                      type="submit"
+                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                      role="menuitem"
+                      tabindex="-1"
+                      id="menu-item-1"
+                    >
+                      Logout
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
           <a
             href="/"
             id="navbar-logo"
@@ -75,7 +98,7 @@
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
             <a
               id="sell"
-              href="#"
+              href="/jual"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
@@ -157,48 +180,69 @@
       </header>
     </div>
 
-
     <!-- Content -->
     <div
       id="content"
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
-
-
       <!-- Header -->
       <section class="w-full sm:w-1/2 max-w-7xl mx-auto p-8">
-        <h1 class="header text-5xl font-bold text-center lg:text-left mt-12 mb-4">Let's finish the payment</h1>
-        <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
+        <h1
+          class="header text-5xl font-bold text-center lg:text-left mt-12 mb-4"
+        >
+          Let's finish the payment
+        </h1>
+        <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
       </section>
 
-        <!-- Payment Section -->
-        <section class="py-8">
-          <div class="max-w-7xl mx-auto px-4">
-            <div class="payment-container grid grid-cols-1 md:grid-cols-2 gap-6">
-              <!-- Payment Form -->
-              <div class="border-2 my-auto border-black p-6 rounded-lg shadow-lg">
-                <h2 class="text-4xl  font-semibold my-1 text-center">Scan Barcode di Bawah ini</h2>
-                <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
-                <img src="/images/qr-code.png" alt="Barcode" class="mx-auto w-3/4 md:w-3/4">
-                  <hr class="h-px w-full bg-black border-0 dark:bg-gray-700">
-                  <div>
-                  <button class="ml-4 sm:ml-0 bg-black text-white py-2 px-12 mt-4 rounded-xl hover:bg-gray-900" type="submit">Saya sudah membayar</button>
-                    <p class="mt-2"> Dengan checkout, Anda setuju dengan <strong>Kebijakan Privasi</strong> Penggunaan kami dan mengonfirmasi bahwa Anda telah membaca 
-                      <strong>Kebijakan Privasi</strong> kami. Anda dapat membatalkan biaya perpanjangan layanan kapan saja.</p>
-                  </div>
-                  <p class="text-gray-500 text-xs mt-4">
-                    * Biaya untuk 1 bulan pertama. <br>
-                    * Pembelian dapat dibatalkan.
-                  </p>
+      <!-- Payment Section -->
+      <section class="py-8">
+        <div class="max-w-7xl mx-auto px-4">
+          <div class="payment-container grid grid-cols-1 md:grid-cols-2 gap-6">
+            <!-- Payment Form -->
+            <div class="border-2 my-auto border-black p-6 rounded-lg shadow-lg">
+              <h2 class="text-4xl font-semibold my-1 text-center">
+                Scan Barcode di Bawah ini
+              </h2>
+              <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+              <img
+                src="/images/qr-code.png"
+                alt="Barcode"
+                class="mx-auto w-3/4 md:w-3/4"
+              />
+              <hr class="h-px w-full bg-black border-0 dark:bg-gray-700" />
+              <div>
+                <button
+                  class="ml-4 sm:ml-0 bg-black text-white py-2 px-12 mt-4 rounded-xl hover:bg-gray-900"
+                  type="submit"
+                >
+                  Saya sudah membayar
+                </button>
+                <p class="mt-2">
+                  Dengan checkout, Anda setuju dengan
+                  <strong>Kebijakan Privasi</strong> Penggunaan kami dan
+                  mengonfirmasi bahwa Anda telah membaca
+                  <strong>Kebijakan Privasi</strong> kami. Anda dapat
+                  membatalkan biaya perpanjangan layanan kapan saja.
+                </p>
               </div>
+              <p class="text-gray-500 text-xs mt-4">
+                * Biaya untuk 1 bulan pertama. <br />
+                * Pembelian dapat dibatalkan.
+              </p>
+            </div>
 
-              <!-- Illustration -->
-              <div class="illustration flex justify-center items-center">
-                <img src="/images//svg/post-office.svg" alt="Illustration" class="w-full md:w-3/4">
-              </div>
+            <!-- Illustration -->
+            <div class="illustration flex justify-center items-center">
+              <img
+                src="/images//svg/post-office.svg"
+                alt="Illustration"
+                class="w-full md:w-3/4"
+              />
             </div>
           </div>
-        </section>
+        </div>
+      </section>
     </div>
 
     <!-- Footer -->
@@ -276,42 +320,43 @@
     </footer>
 
     <script>
-    function toggleMenu(event) {
-          const menu = document.getElementById('menu');
-          const isHidden = menu.classList.contains('hidden');
-          menu.classList.toggle('hidden', !isHidden);
-          menu.setAttribute('aria-expanded', !isHidden);
-          event.currentTarget.setAttribute('aria-expanded', !isHidden);
-        }
-      
-        const menuButton = document.getElementById('menu-button');
-        menuButton.addEventListener('click', toggleMenu);
-      
-        document.addEventListener('click', (event) => {
-          const menu = document.getElementById('menu');
-          if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
-            menu.classList.add('hidden');
-            menuButton.setAttribute('aria-expanded', 'false');
-          }
-        });
-
-    function readMoreFunction() {
-      var dots = document.getElementById("dots");
-      var moreText = document.getElementById("more");
-      var btnText = document.getElementById("myBtn");
-
-      if (dots.style.display === "none") {
-        dots.style.display = "inline";
-        btnText.innerHTML = "Lihat Selengkapnya";
-        moreText.style.display = "none";
-      } else {
-        dots.style.display = "none";
-        btnText.innerHTML = "Lihat Lebih Sedikt";
-        moreText.style.display = "inline";
+      function toggleMenu(event) {
+        const menu = document.getElementById("menu");
+        const isHidden = menu.classList.contains("hidden");
+        menu.classList.toggle("hidden", !isHidden);
+        menu.setAttribute("aria-expanded", !isHidden);
+        event.currentTarget.setAttribute("aria-expanded", !isHidden);
       }
-    }
-        
 
+      const menuButton = document.getElementById("menu-button");
+      menuButton.addEventListener("click", toggleMenu);
+
+      document.addEventListener("click", (event) => {
+        const menu = document.getElementById("menu");
+        if (
+          !menuButton.contains(event.target) &&
+          !menu.contains(event.target)
+        ) {
+          menu.classList.add("hidden");
+          menuButton.setAttribute("aria-expanded", "false");
+        }
+      });
+
+      function readMoreFunction() {
+        var dots = document.getElementById("dots");
+        var moreText = document.getElementById("more");
+        var btnText = document.getElementById("myBtn");
+
+        if (dots.style.display === "none") {
+          dots.style.display = "inline";
+          btnText.innerHTML = "Lihat Selengkapnya";
+          moreText.style.display = "none";
+        } else {
+          dots.style.display = "none";
+          btnText.innerHTML = "Lihat Lebih Sedikt";
+          moreText.style.display = "inline";
+        }
+      }
     </script>
 
     <script src="/js/script.js"></script>
