--- a/sellandbuy/src/templates/profile/item/detail-item.ejs
+++ b/sellandbuy/src/templates/profile/item/detail-item.ejs
@@ -15,11 +15,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/detail-item.css">
+    <link rel="stylesheet" href="css/detail-item.css" />
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   </head>
   <body class="min-h-screen flex flex-col font-saira">
-
     <!-- Navbar -->
     <div id="nav-wrp" class="mb-20">
       <header
@@ -30,37 +29,61 @@
           id="top-nav"
           class="w-full flex items-center justify-between sm:pt-4 sm:pb-0 px-2 sm:px-5 pt-5 pb-5"
         >
-        <div id="left-part" class="sm:w-1/3 flex justify-start">
-          <div class="relative inline-block text-left">
-            <div>
-              <button
-                type="button"
-                class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
-                id="menu-button"
-                aria-expanded="false"
-                aria-haspopup="true"
+          <div id="left-part" class="sm:w-1/3 flex justify-start">
+            <div class="relative inline-block text-left">
+              <div>
+                <button
+                  type="button"
+                  class="inline-flex w-full justify-center gap-x-1.5 rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-200 transition"
+                  id="menu-button"
+                  aria-expanded="false"
+                  aria-haspopup="true"
+                >
+                  <img class="w-btn-pfl" src="/images/pictures/default.png" />
+                </button>
+              </div>
+              <div
+                class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
+                role="menu"
+                aria-orientation="vertical"
+                aria-labelledby="menu-button"
+                tabindex="-1"
+                id="menu"
               >
-                <img class="w-btn-pfl" src="/images/pictures/default.png" />
-              </button>
-            </div>
-            <div
-              class="absolute left-0 right-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none hidden transition-all duration-300 ease-in-out"
-              role="menu"
-              aria-orientation="vertical"
-              aria-labelledby="menu-button"
-              tabindex="-1"
-              id="menu"
-            >
-              <div class="py-1" role="none">
-                <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/profile'">Profile</button>
-                <button class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-0" onclick="location.href = '/membership'">Jadi Member</button>
-                <form method="POST" action="#" role="none">
-                  <button type="submit" class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer" role="menuitem" tabindex="-1" id="menu-item-1">Logout</button>
-                </form>
+                <div class="py-1" role="none">
+                  <button
+                    class="block w-full px-4 py-2 text-sm text-left text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/profile'"
+                  >
+                    Profile
+                  </button>
+                  <button
+                    class="block w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                    role="menuitem"
+                    tabindex="-1"
+                    id="menu-item-0"
+                    onclick="location.href = '/membership'"
+                  >
+                    Jadi Member
+                  </button>
+                  <form method="POST" action="#" role="none">
+                    <button
+                      type="submit"
+                      class="w-full px-4 py-2 text-left text-sm text-gray-700 cursor-pointer"
+                      role="menuitem"
+                      tabindex="-1"
+                      id="menu-item-1"
+                    >
+                      Logout
+                    </button>
+                  </form>
+                </div>
               </div>
             </div>
           </div>
-        </div>
           <a
             href="/"
             id="navbar-logo"
@@ -75,7 +98,7 @@
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
             <a
               id="sell"
-              href="#"
+              href="/jual"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
@@ -162,52 +185,85 @@
       id="content"
       class="flex-grow w-full mt-[101.2px] sm:mt-[96px] mb-10 relative"
     >
-    <div class="p-6 lg:my-auto">
-      <div class="flex flex-col sm:flex-row">
+      <div class="p-6 lg:my-auto">
+        <div class="flex flex-col sm:flex-row">
           <!-- Images Section -->
           <div class="w-full lg:w-1/2 mr-5 mb-4 sm:mb-0 md:my-auto">
-              <div class="grid grid-rows-2 lg:grid-rows-3 grid-flow-col gap-4 justify-center items-center">
-                  <img src="images/market-images/shirt2.png" alt="Image 1" class="h-48 w-48 sm:w-auto sm:h-auto">
-                  <img src="images/market-images/shirt3.png" alt="Image 2" class="h-48 w-48 sm:w-auto sm:h-auto">
-                  <img src="images/market-images/shirt2.png" alt="Image 3" class="h-48 w-48 sm:w-auto sm:h-auto">
-                  <div class="lg:row-span-3">
-                    <img src="images/market-images/shirt.png" alt="Image 4" class="h-48 w-48 sm:w-auto sm:h-auto">
-                  </div>
+            <div
+              class="grid grid-rows-2 lg:grid-rows-3 grid-flow-col gap-4 justify-center items-center"
+            >
+              <img
+                src="images/market-images/shirt2.png"
+                alt="Image 1"
+                class="h-48 w-48 sm:w-auto sm:h-auto"
+              />
+              <img
+                src="images/market-images/shirt3.png"
+                alt="Image 2"
+                class="h-48 w-48 sm:w-auto sm:h-auto"
+              />
+              <img
+                src="images/market-images/shirt2.png"
+                alt="Image 3"
+                class="h-48 w-48 sm:w-auto sm:h-auto"
+              />
+              <div class="lg:row-span-3">
+                <img
+                  src="images/market-images/shirt.png"
+                  alt="Image 4"
+                  class="h-48 w-48 sm:w-auto sm:h-auto"
+                />
               </div>
+            </div>
           </div>
           <!-- Details Section -->
           <div class="w-full lg:w-1/2 p-4">
-              <h1 class="text-3xl font-bold mb-4 sm:text-4xl lg:text-5xl">Polo Hitam Laki-Laki</h1>
-              <hr class="line h-px w-full xl:w-2/3 bg-black border-0 dark:bg-gray-700">
-              <p class="text-3xl font-bold mt-2 mb-6">Rp.200.000</p>
-              <div class="mb-4">
-                  <h2 class="text-lg">Deskripsi</h2>
-                  <hr class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1">
-                  <p class="text-gray-700">
-                      <strong>Kategori:</strong> Pakaian & Aksesoris<br>
-                      <strong>Kondisi:</strong> Baru<br>
-                      <strong>Ukuran:</strong> S, M, L, XL, XXL<br>
-                  </p>
-              </div>
-              <p class="text-gray-700 mb-6 pr-0 xl:pr-72">
-                Bahan 100% katun, penjahitan ganda dibagian bawah dan ujung, welt manset pada kerah, 
-                made in indonesia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                Fusce sit amet orci vel purus feugiat convallis sed sed nisl. Donec lectus odio, posuere sed lacus in, molestie convallis magna. 
-                Aliquam sollicitudin eros mauris, ac tristique justo volutpat non. Sed vitae tempor ante. Mauris viverra diam sit amet est ornare, 
-                eu malesuada arcu tristique. Praesent sed dictum ipsum.
+            <h1 class="text-3xl font-bold mb-4 sm:text-4xl lg:text-5xl">
+              Polo Hitam Laki-Laki
+            </h1>
+            <hr
+              class="line h-px w-full xl:w-2/3 bg-black border-0 dark:bg-gray-700"
+            />
+            <p class="text-3xl font-bold mt-2 mb-6">Rp.200.000</p>
+            <div class="mb-4">
+              <h2 class="text-lg">Deskripsi</h2>
+              <hr
+                class="h-px w-2/3 bg-black border-0 dark:bg-gray-700 mt-1 mb-1"
+              />
+              <p class="text-gray-700">
+                <strong>Kategori:</strong> Pakaian & Aksesoris<br />
+                <strong>Kondisi:</strong> Baru<br />
+                <strong>Ukuran:</strong> S, M, L, XL, XXL<br />
               </p>
-              <div class="button flex flex-col w-full xl:w-2/3">
-                  <button class="mb-2 border-2 border-black rounded-3xl bg-white text-2xl font-light py-4 hover:bg-gray-100 transition delay-100" onclick="location.href = '/offer'">
-                      Lihat Penawaran
-                  </button>
-                  <button class="mb-2 border-2 border-black rounded-3xl bg-black text-2xl font-light text-white py-4 hover:bg-gray-900 transition delay-100" onclick="location.href = '/product/edit'">
-                    Ubah detail barang
-                  </button>
-              </div>
             </div>
+            <p class="text-gray-700 mb-6 pr-0 xl:pr-72">
+              Bahan 100% katun, penjahitan ganda dibagian bawah dan ujung, welt
+              manset pada kerah, made in indonesia. Lorem ipsum dolor sit amet,
+              consectetur adipiscing elit. Fusce sit amet orci vel purus feugiat
+              convallis sed sed nisl. Donec lectus odio, posuere sed lacus in,
+              molestie convallis magna. Aliquam sollicitudin eros mauris, ac
+              tristique justo volutpat non. Sed vitae tempor ante. Mauris
+              viverra diam sit amet est ornare, eu malesuada arcu tristique.
+              Praesent sed dictum ipsum.
+            </p>
+            <div class="button flex flex-col w-full xl:w-2/3">
+              <button
+                class="mb-2 border-2 border-black rounded-3xl bg-white text-2xl font-light py-4 hover:bg-gray-100 transition delay-100"
+                onclick="location.href = '/offer'"
+              >
+                Lihat Penawaran
+              </button>
+              <button
+                class="mb-2 border-2 border-black rounded-3xl bg-black text-2xl font-light text-white py-4 hover:bg-gray-900 transition delay-100"
+                onclick="location.href = '/product/edit'"
+              >
+                Ubah detail barang
+              </button>
+            </div>
+          </div>
         </div>
-    </div>      
-  </div>
+      </div>
+    </div>
 
     <!-- Footer -->
     <footer class="mt-auto">
@@ -284,24 +340,27 @@
     </footer>
 
     <script>
-    function toggleMenu(event) {
-          const menu = document.getElementById('menu');
-          const isHidden = menu.classList.contains('hidden');
-          menu.classList.toggle('hidden', !isHidden);
-          menu.setAttribute('aria-expanded', !isHidden);
-          event.currentTarget.setAttribute('aria-expanded', !isHidden);
+      function toggleMenu(event) {
+        const menu = document.getElementById("menu");
+        const isHidden = menu.classList.contains("hidden");
+        menu.classList.toggle("hidden", !isHidden);
+        menu.setAttribute("aria-expanded", !isHidden);
+        event.currentTarget.setAttribute("aria-expanded", !isHidden);
+      }
+
+      const menuButton = document.getElementById("menu-button");
+      menuButton.addEventListener("click", toggleMenu);
+
+      document.addEventListener("click", (event) => {
+        const menu = document.getElementById("menu");
+        if (
+          !menuButton.contains(event.target) &&
+          !menu.contains(event.target)
+        ) {
+          menu.classList.add("hidden");
+          menuButton.setAttribute("aria-expanded", "false");
         }
-      
-        const menuButton = document.getElementById('menu-button');
-        menuButton.addEventListener('click', toggleMenu);
-      
-        document.addEventListener('click', (event) => {
-          const menu = document.getElementById('menu');
-          if (!menuButton.contains(event.target) && !menu.contains(event.target)) {
-            menu.classList.add('hidden');
-            menuButton.setAttribute('aria-expanded', 'false');
-          }
-        });
+      });
     </script>
 
     <script src="js/script.js"></script>
