--- a/sellandbuy/src/templates/profile/item/edit-item.ejs
+++ b/sellandbuy/src/templates/profile/item/edit-item.ejs
@@ -76,7 +76,7 @@
           <div id="pfl" class="hidden sm:flex w-1/3 justify-end">
             <a
               id="sell"
-              href="#"
+              href="/jual"
               class="flex w-10 h-10 rounded-full items-center justify-center shadow-sm hover:bg-slate-200 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-700"
             >
               <img class="w-btn-pfl" src="/images/tambahkan.png" />
